fix the pathes problem
i have change the index to be outside the frontend dir, then i have make
all pathes start with "./" to fix the error with the loading, also i
have change all the html files paths

--- a/frontend/pages/add_edit.html
+++ b/frontend/pages/add_edit.html
@@ -7,7 +7,7 @@
     <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/add_edit.css">
+    <link rel="stylesheet" href="./../CSS/add_edit.css">
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Add/Edit Book</title>
@@ -21,11 +21,11 @@
             </div>
             <nav>
                 <ul class="nav-bar">
-                    <li><a href="../index.html#"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="../index.html#features"><i class="fas fa-info-circle"></i> About</a></li>
-                    <li><a href="admin_dashboard.html"><i class="fa-solid fa-table-columns"></i> Dashboard</a></li>
-                    <li><a href="../index.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Log Out</a></li>
-                    <li><a href="../index.html#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+                    <li><a href="./../../index.html#"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="./../../index.html#features"><i class="fas fa-info-circle"></i> About</a></li>
+                    <li><a href="./admin_dashboard.html"><i class="fa-solid fa-table-columns"></i> Dashboard</a></li>
+                    <li><a href="./../../index.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Log Out</a></li>
+                    <li><a href="./../../index.html#contact"><i class="fas fa-envelope"></i> Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,11 +34,11 @@
     <main class="all">
         <div class="inside">
             <div class="back-btn">
-                <a href="admin_dashboard.html"><i class="fa fa-angle-left" aria-hidden="true"></i> Back</a>
+                <a href="./admin_dashboard.html"><i class="fa fa-angle-left" aria-hidden="true"></i> Back</a>
             </div>
             <div class="book-details">
                 <div class="img-holder">
-                    <img src="../CSS/assets/enceladus.jpg" alt="Book Cover" class="book-cover">
+                    <img src="./../CSS/assets/enceladus.jpg" alt="Book Cover" class="book-cover">
                 </div>
                 <div class="details-form">
                     <form action="admin_dashboard.html">
@@ -154,9 +154,9 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="books.html">Books</a></li>
-                <li><a href="../index.html#features">features</a></li>
+                <li><a href="./../../index.html">Home</a></li>
+                <li><a href="./books.html">Books</a></li>
+                <li><a href="./../../index.html#features">features</a></li>
             </ul>
         </div>
             <div class="footer-section">
