--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -29,11 +29,11 @@
         </div>
         <nav>
             <ul class="nav-bar">
-                <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="./../../index.html"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="#features"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="books.html" class="active"><i class="fas fa-book"></i> Books</a></li>
-                <li><a href="sign-in.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-                <li><a href="sign-up.html" id="register-link"><i class="fas fa-user-plus"></i> Register</a></li>
+                <li><a href="./books.html" class="active"><i class="fas fa-book"></i> Books</a></li>
+                <li><a href="./sign-in.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                <li><a href="./sign-up.html" id="register-link"><i class="fas fa-user-plus"></i> Register</a></li>
                 <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </nav>
@@ -99,7 +99,7 @@
         <div class="book-grid">
             <div class="book-item">
                 <div class="book-cover">
-                    <img src="../CSS/assets/book_cover.jpg" alt="A Song of Ice and Fire book cover">
+                    <img src="./../CSS/assets/book_cover.jpg" alt="A Song of Ice and Fire book cover">
                 </div>
                 <div class="book-details">
                     <h3 class="book-title">A Song of Ice and Fire</h3>
@@ -113,7 +113,7 @@
                         <span class="availability-badge available">Available</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                         <span class="availability-badge low-stock">Low Stock</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                         <span class="availability-badge unavailable">Unavailable</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                         <span class="availability-badge available">Available</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                         <span class="availability-badge available">Available</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                         <span class="availability-badge low-stock">Low Stock</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                         <span class="availability-badge available">Available</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                         <span class="availability-badge unavailable">Unavailable</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                         <span class="availability-badge available">Available</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                         <span class="availability-badge available">Available</span>
                     </div>
                     <div class="book-actions">
-                        <a href="book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -340,8 +340,8 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="books.html">Books</a></li>
+                <li><a href="./../../index.html">Home</a></li>
+                <li><a href="./books.html">Books</a></li>
                 <li><a href="#features">Features</a></li>
             </ul>
         </div>
