--- a/frontend/pages/borrowed.html
+++ b/frontend/pages/borrowed.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/_variables.css">
-    <link rel="stylesheet" href="../CSS/header.css">
-    <link rel="stylesheet" href="../CSS/footer.css">
-    <link rel="stylesheet" href="../CSS/index.css">
-    <link rel="stylesheet" href="../CSS/borrowed.css">
+    <link rel="stylesheet" href="./../CSS/_variables.css">
+    <link rel="stylesheet" href="./../CSS/header.css">
+    <link rel="stylesheet" href="./../CSS/footer.css">
+    <link rel="stylesheet" href="./../CSS/index.css">
+    <link rel="stylesheet" href="./../CSS/borrowed.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,12 +28,12 @@
         </div>
         <nav>
             <ul class="nav-bar">
-                <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="books.html"><i class="fas fa-book"></i> Books</a></li>
-                <li><a href="borrowed.html" class="active"><i class="fas fa-bookmark"></i> My Borrows</a></li>
-                <li><a href="user_dashboard.html"><i class="fas fa-user"></i> Account</a></li>
+                <li><a href="../../index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="./books.html"><i class="fas fa-book"></i> Books</a></li>
+                <li><a href="./borrowed.html" class="active"><i class="fas fa-bookmark"></i> My Borrows</a></li>
+                <li><a href="./user_dashboard.html"><i class="fas fa-user"></i> Account</a></li>
                 <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-                <li><a href="../index.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                <li><a href="../../index.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </nav>
     </div>
@@ -123,7 +123,7 @@
                 <!-- A Song of Ice and Fire - Currently Borrowed - Overdue (7 days) -->
                 <div class="borrowed-item">
                     <div class="borrowed-cover">
-                        <img src="../CSS/assets/book_cover.jpg" alt="A Song of Ice and Fire book cover">
+                        <img src="./../CSS/assets/book_cover.jpg" alt="A Song of Ice and Fire book cover">
                     </div>
                     <div class="borrowed-details">
                         <h3 class="borrowed-title">A Song of Ice and Fire</h3>
@@ -428,9 +428,9 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="books.html">Books</a></li>
-                <li><a href="borrowed.html">My Borrows</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="./books.html">Books</a></li>
+                <li><a href="./borrowed.html">My Borrows</a></li>
             </ul>
         </div>
         <div class="footer-section">
