--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
     <title>Online Library</title>
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="./frontend/CSS/index.css">
 
   </head>
   <body>
@@ -33,9 +33,9 @@
             <li><a href="#features"><i class="fas fa-info-circle"></i>
                 About</a></li>
             <li><a href="#books"><i class="fas fa-book"></i> Books</a></li>
-            <li><a href="pages/sign-in.html" id="login-link"><i
+            <li><a href="./frontend/pages/sign-in.html" id="login-link"><i
                   class="fas fa-sign-in-alt"></i> Login</a></li>
-            <li><a href="pages/sign-up.html" id="register-link"><i
+            <li><a href="./frontend/pages/sign-up.html" id="register-link"><i
                   class="fas fa-user-plus"></i> Register</a></li>
             <li><a href="#contact"><i class="fas fa-envelope"></i>
                 Contact</a></li>
@@ -52,14 +52,14 @@
           <p>Access thousands of books from the comfort of your home. Browse,
             borrow, and explore our extensive collection.</p>
           <div class="hero-buttons">
-            <a href="pages/sign-in.html" class="btn primary-btn">Sign in to see
+            <a href="./frontend/pages/sign-in.html" class="btn primary-btn">Sign in to see
               more books</a>
-            <a href="pages/sign-up.html" class="btn secondary-btn">Sign Up
+            <a href="./frontend/pages/sign-up.html" class="btn secondary-btn">Sign Up
               Free</a>
           </div>
         </div>
         <div class="hero-image">
-          <img src="CSS/assets/online-education.gif" alt="Books illustration">
+          <img src="./frontend/CSS/assets/online-education.gif" alt="Books illustration">
         </div>
       </section>
 
@@ -90,30 +90,30 @@
       <section class="available-books" id="books">
         <div class="section-header">
           <h2>Available Books</h2>
-          <a href="pages/sign-up.html" class="view-all">View All <i
+          <a href="./frontend/pages/sign-up.html" class="view-all">View All <i
               class="fas fa-arrow-right"></i></a>
         </div>
         <div id="book-list" class="book-container">
           <!-- Books will be dynamically inserted here by books.js -->
           <div class="book-card">
-            <a href="pages/sign-up.html">
-              <img src="CSS/assets/book1.jpeg" alt="book1">
+            <a href="./frontend/pages/sign-up.html">
+              <img src="./frontend/CSS/assets/book1.jpeg" alt="book1">
             </a>
           </div>
           <div class="book-card">
 
-            <a href="pages/sign-up.html">
-              <img src="CSS/assets/book2.jpeg" alt="book2">
+            <a href="./frontend/pages/sign-up.html">
+              <img src="./frontend/CSS/assets/book2.jpeg" alt="book2">
             </a>
           </div>
           <div class="book-card">
-            <a href="pages/sign-up.html">
-              <img src="CSS/assets/book3.jpeg" alt="book3">
+            <a href="./frontend/pages/sign-up.html">
+              <img src="./frontend/CSS/assets/book3.jpeg" alt="book3">
             </a>
           </div>
           <div class="book-card">
-            <a href="pages/sign-up.html">
-              <img src="CSS/assets/book4.jpeg" alt="book4">
+            <a href="./frontend/pages/sign-up.html">
+              <img src="./frontend/CSS/assets/book4.jpeg" alt="book4">
             </a>
           </div>
 
@@ -150,9 +150,9 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#books">Books</a></li>
             <li><a href="#features">features</a></li>
-            <li><a href="pages/add_edit.html">add edit</a></li>
-            <li><a href="pages/admin_dashboard.html">admin board</a></li>
-            <li><a href="pages/user_dashboard.html">User dash board</a></li>
+            <li><a href="./frontend/pages/add_edit.html">add edit</a></li>
+            <li><a href="./frontend/pages/admin_dashboard.html">admin board</a></li>
+            <li><a href="./frontend/pages/user_dashboard.html">User dash board</a></li>
 
           </ul>
         </div>
