--- a/frontend/pages/book_details.html
+++ b/frontend/pages/book_details.html
@@ -10,9 +10,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
-        <link rel="stylesheet" href="../CSS/book_details.css">
-        <link rel="stylesheet" href="../CSS/footer.css">
-        <link rel="stylesheet" href="../CSS/header.css">
+        <link rel="stylesheet" href="./../CSS/book_details.css">
+        <link rel="stylesheet" href="./../CSS/footer.css">
+        <link rel="stylesheet" href="./../CSS/header.css">
     </head>
 
     <body class="bodyStyle">
@@ -24,8 +24,8 @@
                 </div>
                 <nav>
                     <ul class="nav-bar">
-                        <li><a href="../pages/user_dashboard.html" class="active"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="../pages/books.html"><i class="fas fa-book"></i> Books</a></li>
+                        <li><a href="./../pages/user_dashboard.html" class="active"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="./../pages/books.html"><i class="fas fa-book"></i> Books</a></li>
                         <!-- <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li> -->
                         <!-- <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li> -->
                         <!-- <li><a href="pages/sign-in.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li> -->
@@ -37,7 +37,7 @@
 
         <div class="container">
             <div class="book-cover">
-                <img src="../CSS/assets/book_cover.jpg" alt="Ice & Fire book cover">
+                <img src="./../CSS/assets/book_cover.jpg" alt="Ice & Fire book cover">
             </div>
             <div class="details">
                 <h1>Ice & Fire</h1>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="button-container">
-                    <a href="../pages/books.html" class="back-btn"><i class="fas fa-arrow-left"></i> Back to Books</a>
+                    <a href="./../pages/books.html" class="back-btn"><i class="fas fa-arrow-left"></i> Back to Books</a>
                     <button class="btn"><i class="fas fa-book-reader"></i> <strong>Borrow Now</strong></button>
                 </div>
             </div>
