--- a/frontend/pages/sign-in.html
+++ b/frontend/pages/sign-in.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="/CSS/forms-style.css">
+    <link rel="stylesheet" href="./../CSS/forms-style.css">
     <title>Online-library</title>
 </head>
 <body>
@@ -40,13 +40,13 @@
             </div>
 
             <button type="submit">Sign in</button>
-            <a class="cancel-button" href="../index.html">Cancel</a>
+            <a class="cancel-button" href="./../../index.html">Cancel</a>
             <div class="sign-up">
                 <span>Don't have an account?</span>
-                <a href="sign-up.html">Sign up</a>
+                <a href="./sign-up.html">Sign up</a>
             </div>
         </form>
-        <img src="/CSS/assets/man-reading-design.png" alt="man reading a book">
+        <img src="./../CSS/assets/man-reading-design.png" alt="man reading a book">
     </section>
 
 </body>
