--- a/frontend/pages/sign-up.html
+++ b/frontend/pages/sign-up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/CSS/forms-style.css">
+    <link rel="stylesheet" href="./../CSS/forms-style.css">
     <title>Online-library</title>
 </head>
 <body>
@@ -44,13 +44,13 @@
                 <input class="input" type="email" id="email" name="pass-confirm" placeholder="Enter email" required>
             </div>
             <button type="submit">Sign up</button>
-            <a class="cancel-button" href="/index.html">Cancel</a>
+            <a class="cancel-button" href="./../../index.html">Cancel</a>
             <div class="sign-in">
                 <span>Already have an account ?</span>
-                <a href="sign-in.html">Sign in</a>
+                <a href="./sign-in.html">Sign in</a>
             </div>
         </form>
-        <img src="/CSS/assets/woman-reading-chair.png" alt="man reading a book">
+        <img src="./../CSS/assets/woman-reading-chair.png" alt="man reading a book">
     </section>
 
 </body>
