--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Dashboard</title>
-    <link rel="stylesheet" href="/CSS/user_dashboard.css">
+    <link rel="stylesheet" href="./../CSS/user_dashboard.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
 </head>
 <body>
@@ -16,9 +16,9 @@
             </div>
             <nav>
                 <ul class="nav-bar">
-                    <li><a href="/index.html"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="/pages/books.html"><i class="fas fa-book"></i> Books</a></li>
-                    <li><a href="/index.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                    <li><a href="./index.html"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="./pages/books.html"><i class="fas fa-book"></i> Books</a></li>
+                    <li><a href="./index.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,15 +42,15 @@
                 <h2>👥 Community & Friends</h2>
                 <ul class="friends-list">
                     <li>
-                        <img src="/CSS/assets/friend1.jpeg" alt="User 1">
+                        <img src="./../CSS/assets/friend1.jpeg" alt="User 1">
                         <span>Emma Doe - Reading "The Great Gatsby"</span>
                     </li>
                     <li>
-                        <img src="/CSS/assets/friend2.jpeg" alt="User 2">
+                        <img src="./../CSS/assets/friend2.jpeg" alt="User 2">
                         <span>Jane Smith - Reading "1984"</span>
                     </li>
                     <li>
-                        <img src="/CSS/assets/friend4.jpeg" alt="User 3">
+                        <img src="./../CSS/assets/friend4.jpeg" alt="User 3">
                         <span>Mike Johnson - Finished "To Kill a Mockingbird"</span>
                     </li>
                 </ul>
@@ -60,11 +60,11 @@
             <div class="favorites">
                 <div class="section-header">
                     <h2>❤️ Favorites</h2>
-                    <a href="borrowed.html" class="view-all">View All <i class="fas fa-arrow-right"></i></a>
+                    <a href="./borrowed.html" class="view-all">View All <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="book-grid">
                     <div class="book-card">
-                        <img src="/CSS/assets/book1.jpeg" alt="Book 1">
+                        <img src="./../CSS/assets/book1.jpeg" alt="Book 1">
                         <div class="book-info">
                             <h3>Book Title</h3>
                             <p>Author: John Doe</p>
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="book-card">
-                        <img src="/CSS/assets/book2.jpeg" alt="Book 2">
+                        <img src="./../CSS/assets/book2.jpeg" alt="Book 2">
                         <div class="book-info">
                             <h3>Another Book</h3>
                             <p>Author: Jane Doe</p>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="book-card">
-                        <img src="/CSS/assets/book3.jpeg" alt="Book 1">
+                        <img src="./../CSS/assets/book3.jpeg" alt="Book 1">
                         <div class="book-info">
                             <h3>Book Title</h3>
                             <p>Author: John Doe</p>
@@ -90,7 +90,7 @@
                     </div>
 
                     <div class="book-card">
-                        <img src="/CSS/assets/book4.jpeg" alt="Book 2">
+                        <img src="./../CSS/assets/book4.jpeg" alt="Book 2">
                         <div class="book-info">
                             <h3>Another Book</h3>
                             <p>Author: Jane Doe</p>
@@ -104,11 +104,11 @@
             <div class="borrowed-books">
                 <div class="section-header">
                     <h2>📚 Borrowed Books</h2>
-                <a href="borrowed.html" class="view-all">View All <i class="fas fa-arrow-right"></i></a>
+                <a href="./borrowed.html" class="view-all">View All <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="book-grid">
                     <div class="book-card">
-                        <img src="/CSS/assets/book5.jpeg" alt="Book 1">
+                        <img src="./../CSS/assets/book5.jpeg" alt="Book 1">
                         <div class="book-info">
                             <h3>Book Title</h3>
                             <p>Author: John Doe</p>
@@ -117,7 +117,7 @@
                     </div>
 
                     <div class="book-card">
-                        <img src="/CSS/assets/book3.jpeg" alt="Book 2">
+                        <img src="./../CSS/assets/book3.jpeg" alt="Book 2">
                         <div class="book-info">
                             <h3>Another Book</h3>
                             <p>Author: Jane Doe</p>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="book-card">
-                        <img src="/CSS/assets/book1.jpeg" alt="Book 1">
+                        <img src="./../CSS/assets/book1.jpeg" alt="Book 1">
                         <div class="book-info">
                             <h3>Book Title</h3>
                             <p>Author: John Doe</p>
@@ -134,7 +134,7 @@
                     </div>
 
                     <div class="book-card">
-                        <img src="/CSS/assets/book2.jpeg" alt="Book 2">
+                        <img src="./../CSS/assets/book2.jpeg" alt="Book 2">
                         <div class="book-info">
                             <h3>Another Book</h3>
                             <p>Author: Jane Doe</p>
