--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -303,7 +303,7 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="./../../index.html">Home</a></li>
-                <li><a href="./pages/books.html">Books</a></li>
+                <li><a href="./books.html">Books</a></li>
                 <li><a href="./../../index.html#features">features</a></li>
             </ul>
         </div>
