--- a/frontend/pages/footer.html
+++ b/frontend/pages/footer.html
@@ -1,29 +1,34 @@
 <footer>
-    <div class="footer-content" id="contact">
-      <div class="footer-section">
-        <h3>Online Library</h3>
-        <p>Your gateway to knowledge and imagination.</p>
-        <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-        </div>
-      </div>
-      <div class="footer-section">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="pages/books.html">Books</a></li>
-          <li><a href="#features">features</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h3>Contact Us</h3>
-        <p><i class="fas fa-envelope"></i> support@libraryonline.com</p>
-        <p><i class="fas fa-phone"></i> +20100100100</p>
+  <div class="footer-content" id="contact">
+    <div class="footer-section">
+      <h3>Online Library</h3>
+      <p>Your gateway to knowledge and imagination.</p>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
-    <div class="footer-bottom">
-      <p>&copy; 2025 Online Library. All rights reserved.</p>
+    <div class="footer-section">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pages/books.html">Books</a></li>
+        <li><a href="#features">features</a></li>
+      </ul>
     </div>
-  </footer>
+    <div class="footer-section">
+      <h3>Contact Us</h3>
+      <p><i class="fas fa-envelope"></i> support@libraryonline.com</p>
+      <p><i class="fas fa-phone"></i> +20100100100</p>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>&copy; 2025 Online Library. All rights reserved.</p>
+  </div>
+  <!-- Back to Top Button -->
+  <a href="#" class="scroll-top">
+    <i class="fas fa-arrow-up"></i>
+  </a>
+
+</footer>
