--- a/frontend/pages/header.html
+++ b/frontend/pages/header.html
@@ -1,18 +1,45 @@
 <header>
     <div class="header-container">
-        <div class="logo">
-            <i class="fas fa-book-open"></i>
-            <span>none</span>
-        </div>
-        <nav>
-            <ul class="nav-bar">
-                <li><a href="#hero" class="active"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="#features"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="pages/books.html"><i class="fas fa-book"></i> Books</a></li>
-                <li><a href="pages/sign-in.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-                <li><a href="pages/sign-up.html" id="register-link"><i class="fas fa-user-plus"></i> Register</a></li>
-                <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-            </ul>
-        </nav>
+      <div class="logo">
+        <i class="fas fa-book-open"></i>
+        <span style="color: var(--text-color);">Online Library</span>
+      </div>
+      <nav>
+        <ul class="nav-bar">
+          <li><a href="#hero" class="active"><i class="fas fa-home"></i>
+              Home</a></li>
+          <li><a href="#features"><i class="fas fa-info-circle"></i>
+              About</a></li>
+          <li><a href="#books"><i class="fas fa-book"></i> Books</a></li>
+          <li><a href="./frontend/pages/sign-in.html" id="login-link"><i
+                class="fas fa-sign-in-alt"></i> Login</a></li>
+          <li><a href="./frontend/pages/sign-up.html" id="register-link"><i
+                class="fas fa-user-plus"></i> Register</a></li>
+          <li><a href="#contact"><i class="fas fa-envelope"></i>
+              Contact</a></li>
+        </ul>
+      </nav>
+      <!-- Add the menu toggle button -->
+      <button class="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </button>
     </div>
-</header>
+  </header>
+
+  <!-- Mobile Menu Side Panel -->
+  <div class="mobile-menu">
+    <button class="close-menu">
+      <i class="fas fa-times"></i>
+    </button>
+    <ul class="mobile-nav">
+      <li><a href="#hero" class="active"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="#features"><i class="fas fa-info-circle"></i> About</a></li>
+      <li><a href="#books"><i class="fas fa-book"></i> Books</a></li>
+      <li><a href="./frontend/pages/sign-in.html" id="mobile-login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+      <li><a href="./frontend/pages/sign-up.html" id="mobile-register-link"><i class="fas fa-user-plus"></i> Register</a></li>
+      <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+    </ul>
+  </div>
+
+  <!-- Overlay for Mobile Menu -->
+  <div class="overlay"></div>
