--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="/CSS/_variables.css"> -->
-    <!-- <link rel="stylesheet" href="/CSS/header.css"> -->
-    <!-- <link rel="stylesheet" href="/CSS/footer.css"> -->
+    <link rel="stylesheet" href="./frontend/CSS/_variables.css">
+    <link rel="stylesheet" href="./frontend/CSS/header.css">
+    <link rel="stylesheet" href="./frontend/CSS/footer.css">
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,8 +41,34 @@
                 Contact</a></li>
           </ul>
         </nav>
+        <!-- Add the menu toggle button -->
+        <button class="menu-toggle">
+          <i class="fas fa-bars"></i>
+        </button>
       </div>
     </header>
+
+    <!-- Mobile Menu Side Panel -->
+    <div class="mobile-menu">
+      <button class="close-menu">
+        <i class="fas fa-times"></i>
+      </button>
+      <ul class="mobile-nav">
+        <li><a href="#hero" class="active"><i class="fas fa-home"></i>
+            Home</a></li>
+        <li><a href="#features"><i class="fas fa-info-circle"></i>
+            About</a></li>
+        <li><a href="#books"><i class="fas fa-book"></i> Books</a></li>
+        <li><a href="./frontend/pages/sign-in.html" id="mobile-login-link"><i
+              class="fas fa-sign-in-alt"></i> Login</a></li>
+        <li><a href="./frontend/pages/sign-up.html" id="mobile-register-link"><i
+              class="fas fa-user-plus"></i> Register</a></li>
+        <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Overlay for Mobile Menu -->
+    <div class="overlay"></div>
 
     <main>
       <section class="hero" id="hero">
@@ -52,14 +78,17 @@
           <p>Access thousands of books from the comfort of your home. Browse,
             borrow, and explore our extensive collection.</p>
           <div class="hero-buttons">
-            <a href="./frontend/pages/sign-in.html" class="btn primary-btn">Sign in to see
+            <a href="./frontend/pages/sign-in.html" class="btn primary-btn">Sign
+              in to see
               more books</a>
-            <a href="./frontend/pages/sign-up.html" class="btn secondary-btn">Sign Up
+            <a href="./frontend/pages/sign-up.html"
+              class="btn secondary-btn">Sign Up
               Free</a>
           </div>
         </div>
         <div class="hero-image">
-          <img src="./frontend/CSS/assets/online-education.gif" alt="Books illustration">
+          <img src="./frontend/CSS/assets/online-education.gif"
+            alt="Books illustration">
         </div>
       </section>
 
@@ -151,9 +180,10 @@
             <li><a href="#books">Books</a></li>
             <li><a href="#features">features</a></li>
             <li><a href="./frontend/pages/add_edit.html">add edit</a></li>
-            <li><a href="./frontend/pages/admin_dashboard.html">admin board</a></li>
-            <li><a href="./frontend/pages/user_dashboard.html">User dash board</a></li>
-
+            <li><a href="./frontend/pages/admin_dashboard.html">admin
+                board</a></li>
+            <li><a href="./frontend/pages/user_dashboard.html">User dash
+                board</a></li>
           </ul>
         </div>
         <div class="footer-section">
@@ -163,9 +193,18 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 Online Library. All rights reserved.</p>
+        <p>&copy; <span id="current-year">2025</span> Online Library. All rights
+          reserved.</p>
       </div>
+      <!-- Back to Top Button -->
+      <a href="#" class="scroll-top">
+        <i class="fas fa-arrow-up"></i>
+      </a>
     </footer>
 
+    <!-- JavaScript Files -->
+    <!-- <script src="./frontend/Script/await.js" defer></script> -->
+    <script src="./frontend/Script/header.js"></script>
+    <script src="./frontend/Script/footer.js"></script>
   </body>
 </html>
