book details preview

--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -113,7 +113,10 @@
                         <span class="availability-badge available">Available</span>
                     </div>
                     <div class="book-actions">
-                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html?title=A Song of Ice and Fire&author=R.R. Martin
+                        &about=A Song of Ice and Fire' is Martin's epic fantasy saga, spanning thousands of pages, which captured the imagination of millions and inspired the HBO hit show
+                        &year=2018&status=Available&Genre=Fiction, Mystery&Pages=320&Language=English
+                        &imagePath=./../CSS/assets/book_cover.jpg" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -121,7 +124,7 @@
 
             <div class="book-item">
                 <div class="book-cover">
-                    <i class="fas fa-book-open"></i>
+                    <img src="./../CSS/assets/The_Great_Gatsby_Cover.jpg" alt="The_Great_Gatsby_Cover ">
                 </div>
                 <div class="book-details">
                     <h3 class="book-title">The Great Gatsby</h3>
@@ -135,7 +138,10 @@
                         <span class="availability-badge low-stock">Low Stock</span>
                     </div>
                     <div class="book-actions">
-                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html?title=The Great Gatsby&author=By F. Scott Fitzgerald
+                        &about=The novel was inspired by a youthful romance Fitzgerald had with socialite Ginevra King, and the riotous parties he attended on Long Island's North Shore in 1922.
+                        &year=1925&status=Low Stock&Genre=Classic&Pages=320&Language=English
+                        &imagePath=./../CSS/assets/The_Great_Gatsby_Cover.jpg" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
@@ -143,7 +149,7 @@
 
             <div class="book-item">
                 <div class="book-cover">
-                    <i class="fas fa-book-open"></i>
+                    <img src="./../CSS/assets/cover3.jpg" alt="To Kill a Mockingbird ">
                 </div>
                 <div class="book-details">
                     <h3 class="book-title">To Kill a Mockingbird</h3>
@@ -157,7 +163,10 @@
                         <span class="availability-badge unavailable">Unavailable</span>
                     </div>
                     <div class="book-actions">
-                        <a href="./book_details.html" class="book-btn details-btn">Details</a>
+                        <a href="./book_details.html?title=To Kill a Mockingbird&author=By Harper Lee
+                        &about= the story unfolds as her father, Atticus Finch, a principled lawyer, defends Tom Robinson, a Black man falsely accused of raping a white woman. 
+                        &year=1960&status=Unavailable&Genre=Classic&Pages=320&Language=English
+                        &imagePath=./../CSS/assets/cover3.jpg" class="book-btn details-btn">Details</a>
                         <a href="#" class="book-btn borrow-btn">Borrow</a>
                     </div>
                 </div>
