--- a/frontend/pages/sign-in.html
+++ b/frontend/pages/sign-in.html
@@ -48,9 +48,8 @@
                 <a href="sign-up.html">Sign up</a>
             </div>
         </form>
-        <img src="/frontend/CSS/assets/man-reading-design.png" alt="man reading a book">
+        <img src="./../CSS/assets/man-reading-design.png" alt="man reading a book">
     </section>
-    <script src="/frontend/Script/Forms_validation.js"></script>
+    <script src="./../Script/Forms_validation.js"></script>
 </body>
 </html>
-
