--- a/frontend/pages/sign-up.html
+++ b/frontend/pages/sign-up.html
@@ -54,9 +54,8 @@
                 <a href="sign-in.html">Sign in</a>
             </div>
         </form>
-        <img src="./../CSS/assets/man-reading-design.png" alt="man reading a book">
+        <img src="./../CSS/assets/woman-reading-chair.png" alt="woman reading a book">
     </section>
-    <script src="/frontend/Script/Forms_validation.js"></script>
+    <script src="./../Script/Forms_validation.js"></script>
 </body>
 </html>
-
