--- a/frontend/pages/sign-up.html
+++ b/frontend/pages/sign-up.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/frontend/CSS/forms-style.css">
+    <link rel="stylesheet" href="./../CSS/forms-style.css">
     <title>Online-library</title>
 </head>
 <body>
     <section class="sign-up">
-        <form id="form" >
+        <form >
             <div class="logo">
                 <i class="fas fa-book-open"></i>
                 <span style="color: var(--text-color);">Online Library</span>
@@ -20,42 +20,38 @@
                     <i class="fa-solid fa-user"></i>
                     <label for="username">Username</label>
                 </div>
-                <input class="input" type="text" id="username" name="username" placeholder="Enter username" >
-                <span class="error-text" id="username-error"></span>
+                <input class="input" type="text" id="username" name="username" placeholder="Enter username" required>
             </div>
             <div class="field">
                 <div class="field-heading">
                     <i class="fa-solid fa-lock"></i>
                     <label for="password">password</label>
                 </div>
-                <input class="input" type="password" id="password" name="password" placeholder="Enter password" >
-                <span class="error-text" id="password-error"></span>
+                <input class="input" type="password" id="password" name="password" placeholder="Enter password" required>
             </div>
             <div class="field">
                 <div class="field-heading">
                     <i class="fa-solid fa-pencil"></i>
                     <label for="pass-confirm">Confirm password</label>
                 </div>
-                <input class="input" type="password" id="pass-confirm" name="pass-confirm" placeholder="Confirm password" >
-                <span class="error-text" id="pass-confirm-error"></span>
+                <input class="input" type="password" id="pass-confirm" name="pass-confirm" placeholder="Confirm password" required>
             </div>
             <div class="field">
                 <div class="field-heading">
                     <i class="fa-solid fa-envelope"></i>
                     <label for="email">Email</label>
                 </div>
-                <input class="input" type="email" id="email" name="email" placeholder="Enter email" >
-                <span class="error-text" id="email-error"></span>
+                <input class="input" type="email" id="email" name="pass-confirm" placeholder="Enter email" required>
             </div>
             <button type="submit">Sign up</button>
-            <a class="cancel-button" href="/frontend/index.html">Cancel</a>
+            <a class="cancel-button" href="./../../index.html">Cancel</a>
             <div class="sign-in">
                 <span>Already have an account ?</span>
-                <a href="sign-in.html">Sign in</a>
+                <a href="./sign-in.html">Sign in</a>
             </div>
         </form>
-        <img src="./../CSS/assets/woman-reading-chair.png" alt="woman reading a book">
+        <img src="./../CSS/assets/woman-reading-chair.png" alt="man reading a book">
     </section>
-    <script src="./../Script/Forms_validation.js"></script>
+
 </body>
 </html>
